infrastructure/openshift/examples/02-crunchy-postgres.yaml
# Service for external database connections
# Primary endpoint for write operations
apiVersion: v1
kind: Service
metadata:
  name: payu-postgres-primary
  namespace: payu-dev
  labels:
    app.kubernetes.io/name: payu-postgres
    app.kubernetes.io/component: database
    postgres-operator.crunchydata.com/cluster: payu-postgres
    postgres-operator.crunchydata.com/role: master
spec:
  type: ClusterIP
  selector:
    postgres-operator.crunchydata.com/cluster: payu-postgres
    postgres-operator.crunchydata.com/role: master
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
