infrastructure/openshift/examples/05-rhsso-keycloak.yaml
# Service for internal Keycloak connections
# Note: RHSSO operator creates 'keycloak' (HTTPS 8443) and 'keycloak-discovery' (HTTP 8080)
# For internal service-to-service (avoid SSL cert issues), use keycloak-discovery:8080
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: payu-dev
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: sso
spec:
  type: ClusterIP
  selector:
    app: keycloak
    app.kubernetes.io/managed-by: keycloak-operator
  ports:
    - port: 8443
      targetPort: 8443
      name: https
    - port: 8080
      targetPort: 8080
      name: http

---
# Credentials secret (auto-created by operator)
# Use: oc get secret credential-payu-keycloak -o jsonpath='{.data.ADMIN_USERNAME}' | base64 -d
# Use: oc get secret credential-payu-keycloak -o jsonpath='{.data.ADMIN_PASSWORD}' | base64 -d

---
# Access Information
# Keycloak External URL: https://keycloak-payu-dev.apps.cluster.payu.fajjjar.my.id/auth
# Admin Credentials: Get from secret credential-payu-keycloak
# Internal HTTP (no SSL): http://keycloak-discovery:8080/auth  (use for service-to-service)
# Internal HTTPS: https://keycloak:8443/auth  (requires SSL trust config in Java)
# OIDC Issuer: http://keycloak-discovery:8080/auth/realms/payu
# Token Endpoint: http://keycloak-discovery:8080/auth/realms/payu/protocol/openid-connect/token
# Realm: payu
# Backend Client: payu-backend (confidential, secret: payu-backend-secret)
